Add ErrorResponse entity
